--- a/src/app/components/product-item-component/product-item-component.component.scss
+++ b/src/app/components/product-item-component/product-item-component.component.scss
@@ -1,23 +1,23 @@
 /* Kontener dla całej listy produktów */
 .product-list {
     box-sizing: border-box;
-    display: flex;  /* Ustawia produkty obok siebie w poziomie */
+    display: flex;  
     flex-direction: row;
-    flex-wrap: wrap;  /* Umożliwia przełamanie elementów, gdy nie zmieszczą się w jednej linii */
-    gap: 20px;  /* Daje przestrzeń pomiędzy kartkami */
+    flex-wrap: wrap;  
+    gap: 20px; 
   }
   
   /* Każda karta produktu */
   .product-card {
-    display: flex;  /* Flexbox dla zawartości karty, aby elementy były w pionie */
-    flex-direction: column;  /* Elementy w karcie będą ustawione jeden pod drugim */
+    display: flex;  
+    flex-direction: column;  
     border: 1px solid #ccc;
     padding: 20px;
     border-radius: 8px;
     align-items: center;
     background-color: #f9f9f9;
-    width: 200px;  /* Możesz dostosować szerokość kartki */
-    box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.1);  /* Dodaje cień do karty */
+    width: 200px;  
+    box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.1);  
     height: auto;
   }
   
@@ -25,20 +25,21 @@
   .product-name {
     font-size: 18px;
     font-weight: bold;
-    margin-bottom: 10px;  /* Przestrzeń poniżej nazwy */
+    margin-bottom: 10px;  
   }
   
-  /* Cena produktu */
+  /* Opis produktu */
   .desc {
     font-size: 16px;
     color: #555;
-    margin-bottom: 10px;  /* Przestrzeń poniżej ceny */
+    margin-bottom: 10px;  
   }
   
   /* Styl przycisku */
+
   button {
     padding: 5px 10px;
-    background-color: #4CAF50;
+    background-color: #e71a1a;
     color: white;
     border: none;
     border-radius: 4px;
@@ -46,11 +47,15 @@
   }
   
   button:hover {
-    background-color: #45a049;
+    background-color: #8a0606;
   }
 
+
+  /* Wersja premium */
   .product-card.premium {
     background-color: rgb(255, 251, 27);
+
+    border: 4px solid rgb(245, 124, 26);
   }
 
   .product-card.premium > span {
