--- a/src/app/components/product-list-component/product-list-component.component.scss
+++ b/src/app/components/product-list-component/product-list-component.component.scss
@@ -1,27 +1,47 @@
 .hero {
     & h1 {
+        color: #fcfcfc;
         font-size: 3rem;
+        text-shadow: 2px 2px 5px #757272;
     }
 
     & h2 {
+        color: #fcfcfc;
         font-size: 2rem;
+        text-shadow: 2px 2px 5px #757272;
     }
 }
 
+.content-wrap {
+    width: 100%;
+    height: 100%;
+}
+
 .item-list {
+    margin: 0px auto;
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
     gap: 30px;
+}
+
+.form {
+    margin-left: 24px;
+    color: #fcfcfc;
+    width: 500px;
+    height: 250px;
+    
 }
 
 .form-wrapper {
     padding: 10px;
-    width: 50%;
+    width: auto;
     display: flex;
     flex-direction: column;
     margin: 20px auto;
-    border: 2px solid black;
+    border: 2px solid #fcfcfc;
 }
 
 .form-wrapper input {
