--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,7 +2,12 @@
 :root, html, body {
     margin: 0;
     padding: 0;
-    height: 100%;
+    height: auto;
+    background-color: #0c0c0c;
+}
+
+.content-wrap {
+    margin-top: 74px;
 }
 
 * {
