Created product detail component, added routing by productid

--- a/src/app/components/product-list-component/product-list-component.component.html
+++ b/src/app/components/product-list-component/product-list-component.component.html
@@ -1,10 +1,9 @@
 <div class="content-wrap">
     <div class="hero">
-        <h1>Zakupownik - twój zakupowy asystent! </h1>
+        <h1>Sklepownik - twój katalogowy asystent! </h1>
         <br>
-        <h2>Cześć, {{user()}}!</h2>
         <br>
-        <h2>Poniżej znajduje się Twój koszyk!</h2>
+        <h2>Poniżej znajduje się lista produktów dostępnych w sklepie!</h2>
     </div>
     <div class="form">
         <div class="form-wrapper">
@@ -19,10 +18,20 @@
         </div>
     </div>
     
-    
+
     <div class="item-list">
         <div *ngFor="let prod of products">
-            <app-product-item-component [product]="prod" (delete)="onDeleteProduct($event)"/>
+            <div class="content-wrapper">
+                <div class="content">
+                    <a [routerLink]="['/product', prod.id]">
+                        <app-product-item-component [product]="prod"/>
+                    </a>
+                </div>
+                <div class="button-wrapper">
+                    <button (click)="onDeleteProduct(prod.id)">Usuń produkt!</button>
+                </div>
+            </div>
         </div>
     </div>
 </div>
+
