--- a/src/app/components/product-item-component/product-item-component.component.html
+++ b/src/app/components/product-item-component/product-item-component.component.html
@@ -10,7 +10,7 @@
           <div class="product-name">{{ product.name }}</div>
           <span class="desc">Cena: {{ product.price }}</span>
           <p>Description: Lorem ipsum dolor sit amet.</p>
-          <button (click)="delete.emit(product.id)">Usuń!</button>
+          <button (click)="delete.emit(product.id)">Zobacz więcej!</button>
         </div>
       </div>
   </div>
