--- a/src/app/components/product-item-component/product-item-component.component.scss
+++ b/src/app/components/product-item-component/product-item-component.component.scss
@@ -11,7 +11,7 @@
   .product-card {
     display: flex;  
     flex-direction: column;  
-    border: 1px solid #ccc;
+    border: 4px solid #c78c8c;
     padding: 20px;
     border-radius: 8px;
     align-items: center;
@@ -43,6 +43,7 @@
     color: white;
     border: none;
     border-radius: 4px;
+    margin-top: 16px;
     cursor: pointer;
   }
   
