--- a/src/app/components/product-list-component/product-list-component.component.scss
+++ b/src/app/components/product-list-component/product-list-component.component.scss
@@ -12,9 +12,44 @@
     }
 }
 
+.content-wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    & .button-wrapper {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        & button {
+            margin-top: 16px;
+            width: 150px;
+            height: 42px;
+            border-radius: 8px;
+            background-color: rgb(245, 245, 69);
+            font-weight: 800;
+            cursor: pointer;
+        }
+
+        & button:hover {
+            background-color: rgb(226, 128, 0);
+            transition: 0.5s ease;
+        }
+    }
+}
+
 .content-wrap {
     width: 100%;
     height: 100%;
+}
+
+
+.loader {
+    color: #fcfcfc;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    font-size: 3rem;
 }
 
 .item-list {
@@ -22,9 +57,10 @@
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
-    align-items: center;
-    justify-content: space-around;
+    align-items: flex-start;
+    justify-content: flex-start;
     gap: 30px;
+    margin-left: 40px;
 }
 
 .form {
@@ -47,4 +83,9 @@
 .form-wrapper input {
     margin-top: 5px;
     margin-bottom: 5px;
+}
+
+a {
+    text-decoration: none;
+    color: inherit;
 }
