Added api-product component (fetching data from fakeapi and displaying it in layout), small adjustments in webapp styles

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,8 +3,8 @@
         <span>Pomocnik</span>
         <ul>
             <li routerLink="/">Home</li>
-            <li routerLink="/products">Zakupy</li>
-            <li>Mood tracker</li>
+            <li routerLink="/products">Products</li>
+            <li routerLink="/api-prods">API - products</li>
         </ul>
     </nav>
 </header>
