--- a/src/app/components/product-item-component/product-item-component.component.scss
+++ b/src/app/components/product-item-component/product-item-component.component.scss
@@ -11,33 +11,37 @@
   .product-card {
     display: flex;  
     flex-direction: column;  
-    border: 4px solid #c78c8c;
+    border: 4px solid #b8b8b8;
     padding: 20px;
     border-radius: 8px;
     align-items: center;
     background-color: #f9f9f9;
     width: 200px;  
     box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.1);  
-    height: auto;
+    height: 250px;
   }
   
   /* Nazwa produktu */
   .product-name {
     font-size: 18px;
     font-weight: bold;
-    margin-bottom: 10px;  
+    margin-bottom: 10px;
+    height: 25%;
+    overflow: hidden;
   }
   
   /* Opis produktu */
   .desc {
     font-size: 16px;
     color: #555;
-    margin-bottom: 10px;  
+    margin-bottom: 10px;
+    height: 65%;
   }
   
   /* Styl przycisku */
 
   button {
+    height: 10%;
     padding: 5px 10px;
     background-color: #e71a1a;
     color: white;
