--- a/src/app/components/product-list-component/product-list-component.component.scss
+++ b/src/app/components/product-list-component/product-list-component.component.scss
@@ -64,52 +64,106 @@
     margin-left: 40px;
 }
 
-.form {
-    margin-left: 24px;
-    color: #fcfcfc;
-    width: 500px;
-    height: 250px;
-    
-}
+//Forms 
 
-.form-wrapper {
-    padding: 10px;
-    width: auto;
+.forms {
     display: flex;
-    flex-direction: column;
-    margin: 20px auto;
-    border: 2px solid #fcfcfc;
+    flex-direction: row;
+    justify-content: space-around;
+    margin-top: 32px;
 
-    & input {
-        font-weight: 300;
-        font-size: 1.2rem;
-        width: 50%;
-        border-radius: 16px;
-        text-align: center;
+    & .template-driven-form {
+        margin-top: 32px;
+        color: white;
+        padding: 32px;
+        border: 3px solid #fcfcfc;
+
+        & p {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            margin-bottom: 16px;
+        }
+        & .info {
+            font-size: 1.2rem;
+            margin-top: 16px;
+        }
+
+        & .form {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+
+            & .price-input {
+                width: 50%;
+            }
+
+            & label {
+                font-size: 1.3rem;
+                padding: 5px;
+            }
+
+            & input {
+                width: 100%;
+                border-radius: 8px;
+                font-size: 1.2rem;
+            }
+
+            & .button-box {
+                margin-top: 10px;
+                display: flex;
+                justify-content: center;
+                
+                & button {
+                width: 60%;
+                padding: 8px;
+                font-size: 1.1rem;
+                border-radius: 8px;
+                margin-top: 10px;
+            }
+
+            & button:not(:disabled):hover {
+                border: 2px solid grey;
+                background-color: rgb(177, 241, 80);
+                transition: cubic-bezier(0.445, 0.05, 0.55, 0.95) 0.5s;
+            }
+            }
+
+        }
     }
 
-    & .add-button {
-        width: 50%;
-        height: 45px;
-        font-weight: 300;
-        border-radius: 16px;
-        border: 2px solid rgb(153, 153, 153);
-        font-size: 1.1rem;
-    } 
+    & .reactive-form {
+        margin-top: 32px;
+        display: flex;
+        flex-direction: column;
+        border: 2px solid white;
+        color: #fcfcfc;
+        padding: 32px;
 
-    & .add-button:hover {
-        cursor: pointer;
-        background: greenyellow;
-        border: 2px solid #fcfcfc;
-        transition: ease 0.7s;
+        & form {
+            display: flex;
+            flex-direction: column;
+    
+            & .price-input {
+                width: 50%;
+            }
+
+            & label {
+                font-size: 1.3rem;
+                padding: 5px;
+            }
+
+            & input {
+                width: 100%;
+                border-radius: 8px;
+                font-size: 1.2rem;
+            }
+        }
     }
-       
+
+    margin-bottom: 36px;
 }
 
-.form-wrapper input {
-    margin-top: 5px;
-    margin-bottom: 5px;
-}
 
 a {
     text-decoration: none;
