implemented simple pipe to filter products saved locally / case sensitive version (needs further fixes)

--- a/src/app/components/product-list-component/product-list-component.component.html
+++ b/src/app/components/product-list-component/product-list-component.component.html
@@ -42,9 +42,15 @@
         
     </div>
     
+    <div class="filter-section">
+
+        <label for="search">Filtruj dane:</label>
+        <input type="text" placeholder="Wprowadź tekst" [(ngModel)]="searchTerm">
+
+    </div>
 
     <div class="item-list">
-        <div *ngFor="let prod of products">
+        <div *ngFor="let prod of products | productFilter: searchTerm">
             <div class="content-wrapper">
                 <div class="content">
                     <a [routerLink]="['/product', prod.id]">
