Implemented infinite-scroll with data lazy loading, need to implement lazy loading of components

--- a/src/app/components/product-list-component/product-list-component.component.html
+++ b/src/app/components/product-list-component/product-list-component.component.html
@@ -62,6 +62,13 @@
                 </div>
             </div>
         </div>
+        <div *ngIf="loading" class="loading-indicator">
+            Ładowanie...
+        </div>
+    
+        <div *ngIf="hasMoreItems && !loading" class="load-more-button">
+            <button (click)="loadMoreProducts()">Załaduj więcej</button>
+        </div>
     </div>
 </div>
 
