--- a/src/app/components/product-list-component/product-list-component.component.scss
+++ b/src/app/components/product-list-component/product-list-component.component.scss
@@ -17,6 +17,18 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    animation: fadeInUp 0.5s ease;
+    
+    @keyframes fadeInUp {
+        from {
+        opacity: 0;
+        transform: translateY(10px);
+        }
+        to {
+        opacity: 1;
+        transform: translateY(0);
+        }
+    }
 
     & .button-wrapper {
         display: flex;
